# incubation

./: CMakeLists.txt  README.md  build_data.sh  config.h.in  memcheck.sh
data/gui/: menu.cnf  menu.xcf
data/intro/: logo.cnf  logo.xcf
src/: CMakeLists.txt
src/include/: CMakeLists.txt
src/include/lib/: CMakeLists.txt  config.h  configuration.h  event.h  graphic.h  gui.h  image.h  json.h  log.h  ressource.h  sprite.h  state.h  timer.h
src/include/program/: CMakeLists.txt  intro_state.h  menu_state.h
src/lib/: CMakeLists.txt  configuration.c  event.c  graphic.c  gui.c  image.c  json.c  log.c  ressource.c  state.c  timer.c
src/program/: CMakeLists.txt  game_state.c  intro_state.c  main.c  menu_state.c
tests/: CMakeLists.txt  CTestTestfile.cmake  archive_fixture.tgz  configuration_test.c  configuration_test.h  event_manager_test.c  event_manager_test.h  gui_fixture.tgz  gui_test.c  gui_test.h  image_fixture.tgz  image_fixture1.cnf  image_test.c  image_test.h  json_fixture.json  json_test.c  json_test.h  ressource_test.c  ressource_test.h  state_test.c  state_test.h  test_lib.c
